--- a/tex/2012/3/8.tex
+++ b/tex/2012/3/8.tex
@@ -1,2 +1,58 @@
 \Question{\currfilebase}
-\WorkInProgress
+
+\begin{enumerate}
+    \item We aim to show that for all \(n \geq 0\),
+          \[
+              F_n F_{n + 3} - F_{n + 1} F_{n + 2} = F_{n + 2} F_{n + 5} - F_{n + 3} F_{n + 4}.
+          \]
+
+          Notice that
+          \begin{align*}
+              \RHS & = F_{n + 2} F_{n + 5} - F_{n + 3} F_{n + 4}                             \\
+                   & = F_{n + 2} (F_{n + 3} + F_{n + 4}) - F_{n + 3} (F_{n + 2} + F_{n + 3}) \\
+                   & = F_{n + 2} F_{n + 4} - F_{n + 3} F_{n + 3}                             \\
+                   & = F_{n + 2} (F_{n + 2} + F_{n + 3}) - F_{n + 3} (F_{n + 1} + F_{n + 2}) \\
+                   & = F_{n + 2} F_{n + 2} - F_{n + 3} F_{n + 1}                             \\
+                   & = F_{n + 2} (F_{n + 3} - F_{n + 1}) - F_{n + 3} (F_{n + 2} - F_{n})     \\
+                   & = F_{n} F_{n + 3} - F_{n + 1} F_{n + 2}                                 \\
+                   & = \LHS
+          \end{align*}
+          and set \(n = 0\) shows exactly what is desired.
+
+    \item By the lemma in the previous part, the problem reduces to two cases are when \(n\) is odd and when \(n\) is even.
+          \begin{itemize}
+              \item When \(n\) is even,
+                    \[
+                        F_{n} F_{n + 3} - F_{n + 1} F_{n + 2} = F_0 F_3 - F_1 F_2 = 0 \cdot 2- 1 \cdot 1 = -1.
+                    \]
+
+              \item When \(n\) is odd,
+                    \[
+                        F_{n} F_{n + 3} - F_{n + 1} F_{n + 2} = F_1 F_4 - F_2 F_3 = 1 \cdot 3 - 1 \cdot 2 = 1.
+                    \]
+          \end{itemize}
+
+    \item Using the tangent formula for sum of angles, we have
+          \begin{align*}
+              \arctan \left(\frac{1}{F_{2r + 1}}\right) + \arctan \left(\frac{1}{F_{2r + 2}}\right) & = \arctan \left(\frac{\frac{1}{F_{2r + 1}} + \frac{1}{F_{2r + 2}}}{1 - \frac{1}{F_{2r + 1}} \cdot \frac{1}{F_{2r + 2}}}\right) \\
+                                                                                                    & = \arctan \left(\frac{F_{2r + 1} + F_{2r + 2}}{F_{2r + 1} F_{2r + 2} - 1}\right)                                               \\
+                                                                                                    & = \arctan \left(\frac{F_{2r + 3}}{F_{2r + 1} F_{2r + 2} + (F_{2r} F_{2r + 3} - F_{2r + 1} F_{2r + 2})}\right)                  \\
+                                                                                                    & = \arctan \left(\frac{F_{2r + 3}}{F_{2r} F_{2r + 3}}\right)                                                                    \\
+                                                                                                    & = \arctan \left(\frac{1}{F_{2r}}\right),
+          \end{align*}
+          as desired.
+
+          Hence, we have
+          \[
+              \arctan \left(\frac{1}{F_{2r + 1}}\right) = \arctan \left(\frac{1}{F_{2r}}\right) - \arctan \left(\frac{1}{F_{2r + 2}}\right),
+          \]
+          and therefore
+          \begin{align*}
+              \sum_{r = 1}^{+\infty} \arctan \left(\frac{1}{F_{2r + 1}}\right) & = \sum_{r = 1}^{+\infty} \arctan \left(\frac{1}{F_{2r}}\right) - \sum_{r = 1}^{+\infty} \arctan \left(\frac{1}{F_{2r + 2}}\right) \\
+                                                                               & = \sum_{r = 1}^{+\infty} \arctan \left(\frac{1}{F_{2r}}\right) - \sum_{r = 2}^{+\infty} \arctan \left(\frac{1}{F_{2r}}\right)     \\
+                                                                               & = \arctan \left(\frac{1}{F_{2 \cdot 1}}\right)                                                                                    \\
+                                                                               & = \arctan \left(\frac{1}{F_2}\right)                                                                                              \\
+                                                                               & = \arctan \left(1\right)                                                                                                          \\
+                                                                               & = \frac{\pi}{4}.
+          \end{align*}
+\end{enumerate}
