--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -48,6 +48,7 @@
 
 % Probabililty
 \DeclareMathOperator{\Cov}{Cov}
+\DeclareMathOperator{\Corr}{Corr}
 \DeclareMathOperator{\Var}{Var}
 \DeclareMathOperator{\Expt}{E}
 \DeclareMathOperator{\Prob}{P}
