finish step iii 2010 q12

--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -58,6 +58,7 @@
 \DeclareMathOperator{\Poisson}{Po}
 \DeclareMathOperator{\Normal}{N}
 \DeclareMathOperator{\Exponential}{Exp}
+\DeclareMathOperator{\Geometric}{Geo}
 \DeclareMathOperator{\Uniform}{U}
 
 % Complex Numbers
