--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -11,6 +11,7 @@
 \usepackage{amsfonts}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{mathtools}
 
 \usepackage[dvipsnames]{xcolor}
 \usepackage{fontawesome5}
@@ -87,6 +88,11 @@
 \DeclareMathOperator{\cosech}{cosech}
 \DeclareMathOperator{\arcosech}{arcosech}
 
+% Paired Delimiters
+\DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
+\DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
+\DeclarePairedDelimiter{\abs*}{\lvert}{\rvert}
+
 % Other Math Symbols
 \DeclareMathOperator{\modulo}{mod}
 
@@ -94,7 +100,6 @@
 \newcommand{\bvect}[1]{\overrightarrow{#1}}
 \newcommand{\divides}{\mid}
 \newcommand{\notdivides}{\nmid}
-\newcommand{\abs}[1]{\left\lvert#1\right\rvert}
 \newcommand{\LHS}{\text{LHS}}
 \newcommand{\RHS}{\text{RHS}}
 
