--- a/tex/2013/3/1.tex
+++ b/tex/2013/3/1.tex
@@ -24,7 +24,7 @@ which means
 \]
 and hence
 \[
-    \abs{\sin x} = \frac{2t}{1 + t^2}.
+    \abs*{\sin x} = \frac{2t}{1 + t^2}.
 \]
 
 What remains is to consider the sign. Notice that \(t \geq 0\) if and only if
