--- a/tex/2013/3/3.tex
+++ b/tex/2013/3/3.tex
@@ -49,7 +49,7 @@ as desired.
 
           We must have
           \[
-              \abs{\vect{p}_2} = \sqrt{a^2 + 0^2 + b^2} = \sqrt{a^2 + b^2} = 1,
+              \abs*{\vect{p}_2} = \sqrt{a^2 + 0^2 + b^2} = \sqrt{a^2 + b^2} = 1,
           \]
           which means
           \[
