--- a/tex/2013/3/7.tex
+++ b/tex/2013/3/7.tex
@@ -22,7 +22,7 @@
           \]
           and hence
           \[
-              |y(x)| \leq 1.
+              \abs*{y(x)} \leq 1.
           \]
 
     \item We notice that
