--- a/tex/2014/3/4.tex
+++ b/tex/2014/3/4.tex
@@ -25,11 +25,11 @@
           This gives \(I = I_1\). Also, notice that the integrand of \(I_1\) is \((y' + y \tan x)^2\) is always non-negative, which means \(I_1 \geq 0\), taking \(0\) only when \(y' + y \tan x = 0\) for all \(x \in (0, 1)\).
 
           \begin{align*}
-              y' + y \tan x     & = 0                  \\
-              \DiffFrac{y}{x}   & = -y \tan x          \\
-              \frac{\Diff y}{y} & = - \tan x \Diff x   \\
-              \ln|y|            & = - \ln |\sec x| + C \\
-              y                 & = A\cos x.           \\
+              y' + y \tan x     & = 0                       \\
+              \DiffFrac{y}{x}   & = -y \tan x               \\
+              \frac{\Diff y}{y} & = - \tan x \Diff x        \\
+              \ln\abs*{y}       & = - \ln \abs*{\sec x} + C \\
+              y                 & = A\cos x.                \\
           \end{align*}
 
           When \(x = 1\), \(y = 0\), hence \(A = 0\) since \(\cos 1 \neq 0\). This means \(I_1 = 0\) if and only if \(y = 0\) for all \(x \in [0, 1]\).
