--- a/tex/2015/3/8.tex
+++ b/tex/2015/3/8.tex
@@ -76,13 +76,13 @@
 
           This therefore means that
           \[
-              \frac{1}{2} \ln \abs{r + 1} + \frac{1}{2} \ln \abs{r - 1} - \ln \abs{r} = \theta + C,
+              \frac{1}{2} \ln \abs*{r + 1} + \frac{1}{2} \ln \abs*{r - 1} - \ln \abs*{r} = \theta + C,
           \]
           for some constant \(C \in \RR\).
 
           Combining logarithms and absolute values gives us
           \[
-              \ln \abs{\frac{r^2 - 1}{r^2}} = 2\theta + C,
+              \ln \abs*{\frac{r^2 - 1}{r^2}} = 2\theta + C,
           \]
           and therefore,
           \[
