--- a/tex/2016/3/2.tex
+++ b/tex/2016/3/2.tex
@@ -60,13 +60,13 @@
 
           Therefore, \(y_T = -\frac{2a}{p}\), \(T\left(-a, -\frac{2a}{p}\right)\) lies on the line \(x = -a\) which is independent of \(p\).
 
-          The distance from the \(x\)-axis to \(T\) is \(\abs{\frac{2a}{p}} = \frac{2a}{\abs{p}}\).
+          The distance from the \(x\)-axis to \(T\) is \(\abs*{\frac{2a}{p}} = \frac{2a}{\abs*{p}}\).
 
-          Notice that since \(qr = 2\), \(q\) and \(r\) must take the same parity, and therefore \(\abs{p} = \abs{q} + \abs{r}\). By the AM-GM inequality, we have
+          Notice that since \(qr = 2\), \(q\) and \(r\) must take the same parity, and therefore \(\abs*{p} = \abs*{q} + \abs*{r}\). By the AM-GM inequality, we have
           \[
-              \abs{q} + \abs{r} \geq 2 \sqrt{\abs{q} \cdot \abs{r}} = 2\sqrt{2},
+              \abs*{q} + \abs*{r} \geq 2 \sqrt{\abs*{q} \cdot \abs*{r}} = 2\sqrt{2},
           \]
-          with the equal sign holding if and only if \(\abs{q} = \abs{r}\), \(q = r\), which is impossible.
+          with the equal sign holding if and only if \(\abs*{q} = \abs*{r}\), \(q = r\), which is impossible.
 
-          Therefore, \(\abs{p} > 2\sqrt{2}\) and therefore \(\frac{2a}{\abs{p}} < \sqrt{2}\) as desired.
+          Therefore, \(\abs*{p} > 2\sqrt{2}\) and therefore \(\frac{2a}{\abs*{p}} < \sqrt{2}\) as desired.
 \end{enumerate}
