--- a/tex/2016/3/4.tex
+++ b/tex/2016/3/4.tex
@@ -13,7 +13,7 @@
                                                                     & = \frac{1}{x - 1} \left[\frac{1}{1 + x} - \frac{1}{1 + x^{n + 1}}\right].
           \end{align*}
 
-          For \(\abs{x} < 1\), as \(n \to \infty\), \(x^{n + 1} \to 0\). Therefore,
+          For \(\abs*{x} < 1\), as \(n \to \infty\), \(x^{n + 1} \to 0\). Therefore,
           \begin{align*}
               \sum_{r = 1}^{\infty} \frac{x^r}{(1 + x^r)(1 + x^{r + 1})} & = \frac{1}{x - 1} \left[\frac{1}{1 + x} - 1\right] \\
                                                                          & = \frac{1}{x - 1} \cdot \frac{-x}{1 + x}           \\
