--- a/tex/2015/3/3.tex
+++ b/tex/2015/3/3.tex
@@ -7,11 +7,11 @@
           \[
               r - a \sec \theta \geq r + a \geq a > b,
           \]
-          but \(\abs{r - a \sec \theta} = b\), implies \(r - a \sec \theta \leq b\), and this leads to a contradiction.
+          but \(\abs*{r - a \sec \theta} = b\), implies \(r - a \sec \theta \leq b\), and this leads to a contradiction.
 
           This implies that \(\sec \theta > 0\). Hence, \(\cos \theta > 0\), and \(\theta \in \left(-\frac{\pi}{2}, \frac{\pi}{2}\right)\).
 
-          We aim to show that \(\abs{r - a \sec \theta} = b\) lies on the conchoid of Nicomedes where \(L: x = a\) and \(d = b\), with \(A(0, 0)\).
+          We aim to show that \(\abs*{r - a \sec \theta} = b\) lies on the conchoid of Nicomedes where \(L: x = a\) and \(d = b\), with \(A(0, 0)\).
 
           Let \(O\) be the origin, \(P_{\theta}(a, a \tan \theta)\) and \(P_0(a, 0)\). All points on the half-line \(OP_{\theta}\) will have argument \(\theta\).
 
@@ -19,14 +19,14 @@
               \input{\currfiledir 3-diag1}
           \end{center}
 
-          Let \(Q_{\theta}\) be the points on such line, satisfying the given equation \(\abs{r - a \sec \theta} = b\).
+          Let \(Q_{\theta}\) be the points on such line, satisfying the given equation \(\abs*{r - a \sec \theta} = b\).
 
           For every \(\theta \in \left(-\frac{\pi}{2}, \frac{\pi}{2}\right)\), we have
           \[
-              \abs{OP_{\theta}} = \abs{OP_0} \sec \theta = a \sec \theta.
+              \abs*{OP_{\theta}} = \abs*{OP_0} \sec \theta = a \sec \theta.
           \]
 
-          The given equation \(\abs{r - a \sec \theta} = b\) simplifies to \(r = a \sec \theta \pm b\).
+          The given equation \(\abs*{r - a \sec \theta} = b\) simplifies to \(r = a \sec \theta \pm b\).
 
           This implies that \(Q_{\theta}\) must lie on the half-line \(OP_{\theta}\) through \(O\), and a fixed distance \(b\) away measured along \(OP_{\theta}\) from line \(L: x = a\) (which is measured from \(P_{\theta}\)).
 
@@ -61,8 +61,8 @@
           Notice that
           \begin{align*}
               \int r^2 \Diff \theta & = \int\left(a^2 \sec^2\theta + 2ab \sec\theta + b^2\right) \Diff{\theta} \\
-                                    & = a^2 \tan\theta + 2ab \ln\abs{\sec\theta + \tan\theta} + b^2\theta + C  \\
-                                    & = \tan\theta + 4\ln\abs{\sec\theta+\tan\theta} + 4\theta + C,
+                                    & = a^2 \tan\theta + 2ab \ln\abs*{\sec\theta + \tan\theta} + b^2\theta + C \\
+                                    & = \tan\theta + 4\ln\abs*{\sec\theta+\tan\theta} + 4\theta + C,
           \end{align*}
           and \[
               \alpha = \arccos\left(-\frac{a}{b}\right) = \arccos\left(-\frac{1}{2}\right) = \frac{2\pi}{3}.
@@ -70,12 +70,12 @@
 
           Therefore,
           \begin{align*}
-              A & = \frac{1}{2}\left[\int_{-\pi}^{-\arccos\left(-\frac{a}{b}\right)} r^2 \Diff{\theta} + \int_{\arccos\left(-\frac{a}{b}\right)}^{\pi} r^2 \Diff{\theta}\right]                                                        \\
-                & = \frac{1}{2} \left[\left(\tan\theta + 4\ln\abs{\sec\theta+\tan\theta} + 4\theta\right)^{-\frac{2\pi}{3}}_{-\pi} + \left(\tan\theta + 4\ln\abs{\sec\theta+\tan\theta} + 4\theta\right)^{\pi}_{\frac{2\pi}{3}}\right] \\
-                & = \frac{1}{2} \left[\left(\sqrt{3} + 4\ln\abs{-2+\sqrt{3}} - \frac{8\pi}{3}\right) - \left(0 + 4\ln\abs{-1} - 4\pi\right)\right.                                                                                     \\
-                & \phantom{=} \left.+ \left(0 + 4\ln\abs{-1} + 4\pi\right) - \left(-\sqrt{3} + 4\ln\abs{-2-\sqrt{3}} + \frac{8\pi}{3}\right)\right]                                                                                    \\
-                & = \frac{1}{2} \left(2\sqrt{3} - \frac{16\pi}{3} + 8\pi\right) + 2\ln(2 - \sqrt{3}) - 2\ln(2 + \sqrt{3})                                                                                                              \\
-                & = \frac{4}{3}\pi + \sqrt{3} + 2\ln\left(\frac{2 - \sqrt{3}}{2 + \sqrt{3}}\right)                                                                                                                                     \\
+              A & = \frac{1}{2}\left[\int_{-\pi}^{-\arccos\left(-\frac{a}{b}\right)} r^2 \Diff{\theta} + \int_{\arccos\left(-\frac{a}{b}\right)}^{\pi} r^2 \Diff{\theta}\right]                                                          \\
+                & = \frac{1}{2} \left[\left(\tan\theta + 4\ln\abs*{\sec\theta+\tan\theta} + 4\theta\right)^{-\frac{2\pi}{3}}_{-\pi} + \left(\tan\theta + 4\ln\abs*{\sec\theta+\tan\theta} + 4\theta\right)^{\pi}_{\frac{2\pi}{3}}\right] \\
+                & = \frac{1}{2} \left[\left(\sqrt{3} + 4\ln\abs*{-2+\sqrt{3}} - \frac{8\pi}{3}\right) - \left(0 + 4\ln\abs*{-1} - 4\pi\right)\right.                                                                                     \\
+                & \phantom{=} \left.+ \left(0 + 4\ln\abs*{-1} + 4\pi\right) - \left(-\sqrt{3} + 4\ln\abs*{-2-\sqrt{3}} + \frac{8\pi}{3}\right)\right]                                                                                    \\
+                & = \frac{1}{2} \left(2\sqrt{3} - \frac{16\pi}{3} + 8\pi\right) + 2\ln(2 - \sqrt{3}) - 2\ln(2 + \sqrt{3})                                                                                                                \\
+                & = \frac{4}{3}\pi + \sqrt{3} + 2\ln\left(\frac{2 - \sqrt{3}}{2 + \sqrt{3}}\right)                                                                                                                                       \\
                 & = \frac{4}{3}\pi + \sqrt{3} + 4\ln(2 - \sqrt{3}).
           \end{align*}
 \end{enumerate}
